--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section id="hero" class="mt-5 d-flex align-items-center">
     <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-4 col-md-12 d-flex justify-content-center align-items-center mb-4 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
+        <div class="col-sm-12 col-lg-5 col-md-12 d-flex justify-content-center align-items-center mb-4 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <img src="assets/img/Principal.png" class="img-fluid" alt="" id="ImagemPrincipal">
         </div>
         <div class="col-lg-7 col-md-9 offset-lg-1 offset-md-1 d-flex align-items-center" id="TextoDeApresentacao">
