--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section id="hero" class="mt-5 d-flex align-items-center">
     <div class="container mt-5">
       <div class="row">
-        <div class="col-sm-12 col-lg-5 col-md-12 d-flex justify-content-center align-items-center mb-4 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
+        <div class="col-lg-4 col-md-12 d-flex justify-content-center align-items-center mb-4 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <img src="assets/img/Principal.png" class="img-fluid" alt="" id="ImagemPrincipal">
         </div>
         <div class="col-lg-7 col-md-9 offset-lg-1 offset-md-1 d-flex align-items-center" id="TextoDeApresentacao">
@@ -91,11 +91,13 @@
           <div class="col-lg-12 col-md-12 text-center">
             <p>
               A psicoterapia é um processo de tratamento psicológico que busca ajudar as pessoas a lidar com questões
-              emocionais, comportamentais ou relacionais. As sessões online oferecem conveniência e acessibilidade,
-              permitindo que os pacientes se conectem com seus terapeutas por meio de videoconferência, recebendo apoio
-              e orientação para superar seus desafios emocionais. Este formato é eficaz e oferece flexibilidade de
-              horários, adaptando-se às necessidades individuais de cada pessoa, independentemente de sua localização
+              emocionais, comportamentais ou relacionais. As sessões online oferecem conveniência e acessibilidade, 
+              permitindo a conexão entre paciente e terapeuta, recebendo apoio e orientação para superar seus desafios emocionais.
+              Este formato é eficaz e oferece flexibilidade de horários,
+              adaptando-se às necessidades individuais de cada pessoa, independentemente de sua localização
               geográfica.
+              
+
             </p>
           </div>
           <div class="col-md-12 text-center mt-4">
@@ -369,7 +371,7 @@
             <img src="assets/img/mmPsicoLogo.svg" id="FooterLogo">
             <p><br>
               <br>
-              <strong>Telefone:</strong><br> (34) 9274-7765 <br>
+              <strong>Telefone:</strong><br> (34) 99274-7765 <br>
               <strong>Email:</strong><br> maryanemundim@gmail.com<br>
             </p>
           </div>
