--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
         <div class="col-lg-7 col-md-9 offset-lg-1 offset-md-1 d-flex align-items-center" id="TextoDeApresentacao">
           <div class="icon-box rounded">
-            <h4>Olá!</h4>
-            <p>Bem-vindo ao espaço onde o desenvolvimento profissional e o bem-estar pessoal se encontram. Eu sou Maryane Mundim, psicóloga e consultora de carreira, dedicada a guiar pessoas como você na busca por uma carreira gratificante e uma vida mais plena. Minha abordagem é única, combinando a profundidade da psicoterapia com a estratégia do desenvolvimento de carreira, para oferecer um caminho de autoconhecimento rumo ao sucesso profissional e pessoal.</p>
+            <h4>Psicóloga CRP-04/32150</h4></br>
+            <p class="text-center">Bem-vindo ao espaço onde o desenvolvimento profissional e o bem-estar pessoal se encontram. Eu sou Maryane Mundim, psicóloga e consultora de carreira, dedicada a guiar pessoas como você na busca por uma carreira gratificante e uma vida mais plena. Minha abordagem é única, combinando a profundidade da psicoterapia com a estratégia do desenvolvimento de carreira, para oferecer um caminho de autoconhecimento rumo ao sucesso profissional e pessoal.</p>
           </div>
         </div>
       </div>
@@ -90,14 +90,8 @@
         <div class="row content">
           <div class="col-lg-12 col-md-12 text-center">
             <p>
-              A psicoterapia é um processo de tratamento psicológico que busca ajudar as pessoas a lidar com questões
-              emocionais, comportamentais ou relacionais. As sessões online oferecem conveniência e acessibilidade, 
-              permitindo a conexão entre paciente e terapeuta, recebendo apoio e orientação para superar seus desafios emocionais.
-              Este formato é eficaz e oferece flexibilidade de horários,
-              adaptando-se às necessidades individuais de cada pessoa, independentemente de sua localização
-              geográfica.
-              
-
+              Os atendimentos são online e oferecem conveniência e acessibilidade, permitindo a conexão entre paciente e terapeuta, recebendo apoio e orientação para superar seus desafios emocionais.
+              Este formato é eficaz e oferece flexibilidade de horários, adaptando-se às necessidades individuais de cada pessoa, independentemente de sua localização geográfica.
             </p>
           </div>
           <div class="col-md-12 text-center mt-4">
@@ -327,8 +321,7 @@
                   class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Uma sessão dura entre 50 minutos, dependendo do serviço selecionado. Esse tempo é dedicado
-                  exclusivamente a você e ao seu desenvolvimento profissional.
+                  Uma sessão dura entre 50 e 60 minutos, dependendo do serviço selecionado. Esse tempo é dedicado exclusivamente a você e ao seu desenvolvimento profissional.
                 </p>
               </div>
             </li>
@@ -339,8 +332,7 @@
                   class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Entendemos que imprevistos acontecem. Você pode remarcar sua sessão com até 24 horas de antecedência,
-                  sujeito à disponibilidade.
+                  Entendemos que imprevistos acontecem. Você pode remarcar sua sessão com até 24 horas de antecedência, dentro da semana vigente e só serão possíveis quando houver disponibilidade do psicólogo.
                 </p>
               </div>
             </li>
@@ -371,8 +363,8 @@
             <img src="assets/img/mmPsicoLogo.svg" id="FooterLogo">
             <p><br>
               <br>
-              <strong>Telefone:</strong><br> (34) 99274-7765 <br>
-              <strong>Email:</strong><br> maryanemundim@gmail.com<br>
+              <strong>Telefone:</strong><br> <h4>(34) 99274-7765</h4> <br>
+              <strong>Email:</strong><br><h4>maryanemundim@gmail.com </h4>  <br>
             </p>
           </div>
 
