--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Links Úteis</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#about">Sobre a Terapia</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Especialidades</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero"><h5>Home</h5> </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about"><h5>Sobre a Terapia</h5> </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services"><h5>Especialidades</h5> </a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
@@ -382,10 +382,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Especialidades</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Depressão</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Ansiedade</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Autoestima</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Burnout</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services"><h5>Depressão</h5> </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services"><h5>Ansiedade</h5> </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services"><h5>Autoestima</h5> </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services"><h5>Burnout</h5> </a></li>
             </ul>
           </div>
 
