--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
         <div class="col-lg-7 col-md-9 offset-lg-1 offset-md-1 d-flex align-items-center" id="TextoDeApresentacao">
           <div class="icon-box rounded">
-            <h4>Psicóloga CRP-04/32150</h4></br>
-            <p class="text-center">Bem-vindo ao espaço onde o desenvolvimento profissional e o bem-estar pessoal se encontram. Eu sou Maryane Mundim, psicóloga e consultora de carreira, dedicada a guiar pessoas como você na busca por uma carreira gratificante e uma vida mais plena. Minha abordagem é única, combinando a profundidade da psicoterapia com a estratégia do desenvolvimento de carreira, para oferecer um caminho de autoconhecimento rumo ao sucesso profissional e pessoal.</p>
+            <h4 class="text-center">Bem-vindo ao espaço onde o desenvolvimento profissional e o bem-estar pessoal se encontram.</h4>
+            <p class="text-center">Eu sou Maryane Mundim, psicóloga (CRP - 04/32150) e consultora de carreira, dedicada a guiar pessoas como você na busca por uma carreira gratificante e uma vida mais plena. Minha abordagem é única, combinando a profundidade da psicoterapia com a estratégia do desenvolvimento de carreira, para oferecer um caminho de autoconhecimento rumo ao sucesso profissional e pessoal.</p>
           </div>
         </div>
       </div>
@@ -212,9 +212,11 @@
         <div class="section-title">
 
           <h2>COMO POSSO AJUDAR</h2>
+          <p>A psicoterapia é um processo de tratamento psicológico que busca ajudar as pessoas a lidar com questões emocionais, comportamentais ou relacionais.</p>
+
         </div>
         <div class="align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-          <div class="icon-box rounded">
+          <div class="cpa-card icon-box rounded">
             <h4>Psicoterapia</h4>
 
             Um espaço seguro para explorar questões pessoais, superar desafios e promover o bem-estar emocional,
@@ -222,7 +224,7 @@
           </div>
           <br>
           <div class="align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box rounded">
+            <div class="cpa-card icon-box rounded">
 
               <h4> Mentoria de Carreira</h4>
               Orientação personalizada para definir metas de carreira realistas e alcançáveis, identificando os passos
@@ -231,7 +233,7 @@
             </div>
             <br>
             <div class="align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-              <div class="icon-box rounded">
+              <div class="cpa-card icon-box rounded">
                 <h4>Mapeamento Comportamental</h4>
 
                 Análise detalhada de suas competências comportamentais e como elas podem ser otimizadas para o sucesso
@@ -240,7 +242,7 @@
               </div>
               <br>
               <div class="align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-                <div class="icon-box rounded">
+                <div class="cpa-card icon-box rounded">
                   <h4>Preparação para Entrevistas </h4>
 
                   Técnicas e práticas para se apresentar de maneira confiante e competente, maximizando suas chances de
@@ -248,7 +250,7 @@
                 </div>
                 <br>
                 <div class="align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-                  <div class="icon-box rounded">
+                  <div class="cpa-card icon-box rounded">
                     <h4>Análise Curricular e LinkedIn</h4>
 
                     Avaliação e aprimoramento do seu currículo e perfil no LinkedIn, garantindo que você se destaque
@@ -256,7 +258,7 @@
                   </div>
                   <br>
                   <div class="align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="icon-box rounded">
+                    <div class="cpa-card icon-box rounded">
                       <h4>Recrutamento e Seleção</h4>
 
                       Para empresas, ofereço minha expertise em identificar e desenvolver os talentos que irão
@@ -268,7 +270,7 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container " data-aos="fade-up">
 
         <div class="section-title">
           <h2>PERGUNTAS FREQUENTES</h2>
